--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+    <head>
+        <title>MY SHORT SRORY</title>
 
-<head>
-    <title>Hello!</title>
-</head>
-
-<body>
-    <h1>Hello, World!</h1>
-</body>
-
+    </head>
+    <body>
+        <p1>My name is Umul-kheir Salum Khamis I live at Kisauni but my current living is at Chwaka villege. I have 23 years old. At 2009 I was start to study primary school at Kiembe Samaki Primary School. And I complete a orimary study at 2015 at Kiembe Samaki B due to the division of Kiembe samaki primary school.  </p1>
+        <br>
+        <p2>In 2016 I was start the secondary school at Benbella Girls Secondary School after the of standard seven published and announced by ZBC radio. And I complete the Ordinary Education level at 2019. At 2020 I continue at Benbella in Advance Levelat ECA Combination which are 
+            <ul>
+                <li>Economic</li>
+                <li>Commerce</li>
+                <li>accountancy</li>
+            </ul>
+            In 2022 I was complete Advance Level and I was passed.
+        </p2>
+        <br>
+        <p3>At the same year I apply to join at State University Of Zanzibar at School Of Business at Chwaka. At program of Bachelor Degree of Information Communication Technology with Accounting (BITA). Now Iam second year student at BITA Course. I hope that this course is better to me. </p3>
+    </body>
 </html>
